<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/albumes_fragment"
        android:icon="@drawable/ic_album"
        android:title="@string/title_albumes" />

    <item
        android:id="@+id/collectorFragment"
        android:icon="@drawable/ic_coleccionistas"
        android:title="@string/title_coleccionistas" />

    <item
        android:id="@+id/artistFragment"
        android:icon="@drawable/ic_artistas"
        android:title="@string/title_artistas" />

</menu>
