...
            android:contentDescription="AlbumCover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@{albums.name}"
            android:textAlignment="textStart"
            android:textColor="@color/primaryTextColor"
...
