<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1F1F1F"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_nombre"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize= "17sp"/>

        <EditText
            android:id="@+id/nombreAlbum"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_nombre"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:labelFor="@id/textView2"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#F0F0F0"
            android:textSize= "14sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_url"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize= "17sp"/>

        <EditText
            android:id="@+id/urlAlbum"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_url"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:labelFor="@id/textView2"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="#F0F0F0"
            android:textSize= "14sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_fecha"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize= "17sp"/>

        <EditText
            android:id="@+id/fechaAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hint_fecha"
            android:textStyle="italic"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize= "14sp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_genero"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize= "17sp"/>

        <Spinner
            android:id="@+id/generoAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:popupBackground="@color/black"
            android:entries="@array/Genero"
            android:minHeight="48dp"
            android:padding="-10dp"
            android:theme="@style/spinnerTheme"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_discografica"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize= "17sp"/>

        <Spinner
            android:id="@+id/empresaAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:contentDescription="Listado de empresas discograficas"
            android:textStyle="italic"
            android:entries="@array/Disquera"
            android:minHeight="48dp"
            android:padding="-10dp"
            android:popupBackground="@color/black"

            android:theme="@style/spinnerTheme"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_descripcion"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize= "17sp"/>

        <EditText
            android:id="@+id/descripcionAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_descripcion"
            android:textStyle="italic"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize= "14sp"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonGuardarAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:contentDescription="enviar"
            android:src="@android:drawable/ic_menu_save"
            app:backgroundTint="#FFC76F"
            app:fabSize="normal"
            android:layout_gravity="end|bottom"
            app:tint="@color/black"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>